fix: add humidity scale

--- a/src/template.html
+++ b/src/template.html
@@ -99,7 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="square-right">
+        <div class="square-right" id="winddirDiv">
           <img id="windIcon">
         </div>
       </div>
@@ -109,7 +109,7 @@
             <div class="square-heading">Humidity</div>
             <div><span class="current currentUnchanged text-2a bold-1" id="humidity"></span><span>%</span></div>
             <div>
-              <span class="bold-1">Moderate</span><br>
+              <span class="bold-1 current" id="humidityLevel"></span><br>
               <span>Dewpoint</span><br>
               <span class="bold-1 current currentUnchanged" id="dew"></span><span id="dewUnit"
                 class="bold-1 tempUnit"></span>
@@ -137,7 +137,7 @@
             <div><span class="text-2a bold-1 current currentUnchanged" id="precip"></span><span
                 class="square-unit precipUnit" id="current-precipitation-unit"></span></div>
             <div>
-              <span class="bold-1" id="precipintensity"></span>
+              <span class="bold-1" id="precipintensity"></span><br>
               <span>Probability</span>
               <span class="bold-1 current currentUnchanged" id="precipprob"></span><span>%</span>
             </div>
